2003-11-22  Kevin Vandersloot

	* util.c, procdialogs.c: Fix hang when entering root password. Patch from
	Kiran Kumar Immidi. Fixes bug #126923

2003-05-21  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: Fix crash if uid is not correct. Fixes bug #109134

2003-03-28  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c, procdialogs.c, infoview.c: some more HIGifications. Patch from
	Laca Ferretti <elle.uca@libero.it>

2003-03-27  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: fix crash if username is null

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: some more HIGifying. Add some space to some dialogs
	
	* favorties.c: HIG stuff. Remove the frame and provide some space and a mnemonic
	for the tree
	
	* memmaps.c: some space

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: do the configure event even if the graphs aren't displayed. Fixes bug #70101.
	
	* callbacks.c: force a graph redraw when tab switched to reduce the delay

2003-02-28  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: Finish the prefs dialog

2003-02-24  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: HIGify. Some details left.

2003-02-23  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: add to the view menu the ability to show dependencies and 
	show threads. Fixes bug #71064
	
	* prettytable.c: reorganize and simplify the code. Hopefully fixes the oft dupped bug
	95238
	
	* load-graph.c: some preliminary work to add multiple cpu support. Need to really
	think this out since I don't have a SMP machine.
	
	* callbacks.c: free the icontheme
	
	* proctable.c: don't free the pixbuf since it is owned by the hash now

2003-02-16  Kevin Vandersloot <kfv101@psu.edu>

	* infoview.c: fix silly typo and get spacing right

2003-02-16  Kevin Vandersloot <kfv101@psu.edu>
	
	* memmaps.c: get sorting of ints correct

2003-02-15  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: add new column displaying VM size. Patch by