@@ -370,7 +370,7 @@ cb_cpu_color_changed (GnomeColorPicker *cp, guint r, guint g, guint b,
 	GConfClient *client = procdata->client;
 	gchar *color;
 	
-	color = g_strdup_printf("#%02x%02x%02x", r, g, b);
+	color = g_strdup_printf("#%04x%04x%04x", r, g, b);
 	gconf_client_set_string (client, "/apps/procman/cpu_color", color, NULL);
 	g_free (color);
 }
@@ -383,7 +383,7 @@ cb_mem_color_changed (GnomeColorPicker *cp, guint r, guint g, guint b,
 	GConfClient *client = procdata->client;
 	gchar *color;
 
-	color = g_strdup_printf("#%02x%02x%02x", r, g, b);
+	color = g_strdup_printf("#%04x%04x%04x", r, g, b);
 	gconf_client_set_string (client, "/apps/procman/mem_color", color, NULL);
 	g_free (color);
 }
@@ -396,7 +396,7 @@ cb_swap_color_changed (GnomeColorPicker *cp, guint r, guint g, guint b,
 	GConfClient *client = procdata->client;
 	gchar *color;
 
-	color = g_strdup_printf("#%02x%02x%02x", r, g, b);
+	color = g_strdup_printf("#%04x%04x%04x", r, g, b);
 	gconf_client_set_string (client, "/apps/procman/swap_color", color, NULL);
 	g_free (color);
 }
