@@ -1,3 +1,11 @@
+2003-11-14  Kaushal Kumar  <kaushal.kumar@wipro.com>
+
+	* src/callbacks.c (cb_cpu_color_changed), 
+	(cb_mem_color_changed), (cb_swap_color_changed):
+	Changed the format for r,g,b to print as 4 digits 
+	each, to ensure 'color' gets the correct code.
+	Fixes bug #126612.
+
 2003-11-22  Kevin Vandersloot
 
 	* util.c, procdialogs.c: Fix hang when entering root password. Patch from
